LookDev with environment texture starts washed out, until viewport moves #64913

Closed
opened 2019-05-20 23:44:12 +02:00 by Casey Connor · 12 comments

Operating system: Kubuntu 18.10, 4.18.0-20-generic #21-Ubuntu SMP Mon May 6 18:45:52 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1)
Broken: 2.80, 9efe117535 Dec 2019-05-20 16:16

When an environment texture is used, LookDev often starts with the environment texture apparently "whitened"; it's as if all pixel values are bumped up a bit. This disappears when the viewport is rotated.

  • remove profile directory, start blender
  • go to "world" tab, click the small circle button next to "Color", choose Environment Texture
  • click "Open image." button, navigate to /2.80/datafiles/sutdiolights/world/night.exr
  • change to LookDev shading
  • use drop-down menu next to shading buttons to change display settings, enable "Scene World"
  • observe that the world is whitish/grey
  • use MMB to rotate viewport
  • observe that the world is immediately shown correctly when movement happens

This seems to happen the first time the world texture is shown, but in my experience it happens other times as well (not sure what triggers it.) It can be annoying when changing in to LookDev because it requires "jiggling" the view to get it to display properly.

Operating system: Kubuntu 18.10, 4.18.0-20-generic #21-Ubuntu SMP Mon May 6 18:45:52 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1) Broken: 2.80, 9efe117535c6 Dec 2019-05-20 16:16 When an environment texture is used, LookDev often starts with the environment texture apparently "whitened"; it's as if all pixel values are bumped up a bit. This disappears when the viewport is rotated. * remove profile directory, start blender * go to "world" tab, click the small circle button next to "Color", choose Environment Texture * click "Open image." button, navigate to <blender directory>/2.80/datafiles/sutdiolights/world/night.exr * change to LookDev shading * use drop-down menu next to shading buttons to change display settings, enable "Scene World" * observe that the world is whitish/grey * use MMB to rotate viewport * observe that the world is immediately shown correctly when movement happens This seems to happen the first time the world texture is shown, but in my experience it happens other times as well (not sure what triggers it.) It can be annoying when changing in to LookDev because it requires "jiggling" the view to get it to display properly.
Author

Added subscriber: @clepsydrae

Added subscriber: @clepsydrae

Added subscriber: @DarkKnight

Added subscriber: @DarkKnight
  • I can confirm that problem with the build 2.80.71
- I can confirm that problem with the build 2.80.71

Added subscriber: @deadpin

Added subscriber: @deadpin

This seems like a more general problem than just with the environment. I can basically repro the problem whenever Eevee needs to recompile its shaders due to a change in the node graph.

The shader recompile happens correctly but the viewport only "half" refreshes, leaving a whitish/whashed-out image in the viewport.

This is most easily seen when using Node Wrangler and using its quick view functionality to view each node individually. As you view each node for the first time the viewport is left in the half-finished state. Upon viewing them again things work correctly.

It also happens when opening the default scene and clicking the Shading workspace for the first time.

This seems like a more general problem than just with the environment. I can basically repro the problem whenever Eevee needs to recompile its shaders due to a change in the node graph. The shader recompile happens correctly but the viewport only "half" refreshes, leaving a whitish/whashed-out image in the viewport. This is most easily seen when using Node Wrangler and using its quick view functionality to view each node individually. As you view each node for the first time the viewport is left in the half-finished state. Upon viewing them again things work correctly. It also happens when opening the default scene and clicking the Shading workspace for the first time.

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can't seem to reproduce this on my end.

Is this still and issue with the latest beta?

I can't seem to reproduce this on my end. Is this still and issue with the latest beta?
Author

Thanks -- yes, just confirmed it with d93a7290e5.

Thanks -- yes, just confirmed it with d93a7290e506.

Yes, still repros here too on 04c54dec44

Here's a gif showing the issue (occurs on both my AMD and nVidia):
partial-refresh.gif

And here's a sample .blend:
viewport-refresh-bug.blend

Yes, still repros here too on 04c54dec445 Here's a gif showing the issue (occurs on both my AMD and nVidia): ![partial-refresh.gif](https://archive.blender.org/developer/F7100600/partial-refresh.gif) And here's a sample .blend: [viewport-refresh-bug.blend](https://archive.blender.org/developer/F7100606/viewport-refresh-bug.blend)
Clément Foucault was assigned by Sebastian Parborg 2019-06-13 11:31:34 +02:00

I can reproduce this around 15% of the time I swap surface output in that file.

I can reproduce this around 15% of the time I swap surface output in that file.

This issue was referenced by 0707177ab8

This issue was referenced by 0707177ab868f1845dba1ecfd396e58c091e89b0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64913
No description provided.