Fix T64913 Eevee: shader compilation does not reset TAA

This tracks the number of compiling shaders and just reset the TAA
if previous number mismatch.